--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{ include = "Ortografia"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 scipy = "^1.15.2"
+pydantic = "^2.10.6"
 
 [poetry.group.dev.dependencies]
 pytest = "^8.3.4"
