Major update. No longer only ch/h. Much more flexible object model.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,6 +84,10 @@ repos:
           - high
           - --confidence-level
           - medium
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.396
+    hooks:
+      - id: pyright
 
   # YAML
   - repo: https://github.com/lyz-code/yamlfix  # Formatter
