--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Ortografia"
-version = "0.1.0"
+version = "0.9.0"
 description = "A simple library for checking the spelling of the text."
 authors = ["Adam Ryczkowski <adam@statystyka.net>"]
 packages = [{ include = "Ortografia"}]
@@ -10,6 +10,7 @@ packages = [{ include = "Ortografia"}]
 python = "^3.12"
 scipy = "^1.15.2"
 pydantic = "^2.10.6"
+rich = "^13.9.4"
 
 [poetry.group.dev.dependencies]
 pytest = "^8.3.4"
@@ -18,3 +19,11 @@ pytest = "^8.3.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+venvPath = "."
+venv = "/home/adam/.cache/pypoetry/virtualenvs/ortografia--wTfDlEi-py3.12"
+pythonVersion = "3.12"
+pythonPlatform = "Linux"
+reportMissingImports = "error"
+reportInvalidTypeForm = false
