--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scipy = "^1.15.2"
 pydantic = "^2.10.6"
 rich = "^13.9.4"
 click = "^8.1.8"
+pandas = "^2.3.0"
 
 [poetry.group.dev.dependencies]
 pytest = "^8.3.4"
